# FairnessOps-Hackathon

./: .env  .gitignore  API.md  DEMO_WIN_PLAN.md  FairnessOps_Reference.md  Fairness_Ops.ipynb  NEW_DIMENSIONS_REFERENCE.txt  README.md  brainstorming.tzt  care_devi_hackathon_plan.md  personal.py  pyproject.toml  responsible-ai.md  sdk_runner.py
.claude/: settings.local.json
FairnessOps_Testing/: scheduler.py  scheduler_alerting.py  scheduler_config.py  scheduler_core.py  scheduler_runtime.py  scheduler_runtime_eicu.py  scheduler_runtime_synthetic.py  train_and_monitor.py
SDK/: __init__.py  config.py  exporter.py  pipeline.py  schemas.py  validator.py
SDK/monitor/: __init__.py  decorator.py  logger.py  supabase_client.py
SDK/workers/: config.py  data_access.py  demographic_worker.py  persist.py  run_worker.py
SDK_testing/: README.md  generate_demo_batch.py  run_all_tests.py  test_monitor_ingest.py  test_sdk_contract.py  test_sdk_scenarios.py  test_sdk_smoke.py
api/: app.py  config.py  main.py
api/routes/: alerts.py  audit.py  metrics.py  stream.py
api/schemas/: alerts.py  audit.py  metrics.py
api/services/: supabase_read.py
controlled_synthetic_bias/: README.md  analyze_bias_results.py  canonical_dataset.csv  run_bias_tests.py
controlled_synthetic_bias/results/: VALIDATION_REPORT.md  (+1 more)
dashboard/: app.py
dashboard-next/: package-lock.json  package.json  tailwind.config.ts
final_qa/: run_final_qa.py
runs/: canonical_dataset.csv  eda_feature_coverage.csv  eda_table_summaries.csv
scripts/: EDA_eicu copy.ipynb  EDA_eicu.ipynb
(+103 files in other folders)
